<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvBienvenida"
        android:textSize="24dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="18dp"
        android:text="@string/tvText1" />

    <Button
        android:id="@+id/btnCE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#B52242"
        android:textSize="18dp"
        android:text="@string/btnCE" />

    <Button
        android:id="@+id/btnCompra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#B52242"
        android:textSize="18dp"
        android:text="@string/btnCompra" />

    <Button
        android:id="@+id/btnTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#B52242"
        android:textSize="18dp"
        android:text="@string/btnTest" />

    <Button
        android:id="@+id/btnIMC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#B52242"
        android:textSize="18dp"
        android:text="@string/btnIMC" />

</LinearLayout>