<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".compra.Productos">

    <TextView
        android:id="@+id/tvNombreCompra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvNombreCompra"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTextoProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textAlignment="center"
        android:text="@string/tvTextoProducto" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSanValentin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvSanValentin"
            android:textSize="16dp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/ivSanValentin"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            app:srcCompat="@drawable/sanvalentin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbChocolates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cbChocolates" />

            <CheckBox
                android:id="@+id/cbDesayuno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cbDesayuno" />

            <CheckBox
                android:id="@+id/cbPeluche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cbPeluche"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHBD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvHBD"
            android:textSize="16dp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="182dp"
            app:srcCompat="@drawable/hbd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbDulces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cbDulces" />

            <CheckBox
                android:id="@+id/cbAccesorios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cbAccesorios" />

            <CheckBox
                android:id="@+id/cbArreglos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cbArreglos" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegistrarProductos"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:backgroundTint="#B52242"
        android:text="@string/btnRegistrarProductos"
        android:textSize="20dp" />

</LinearLayout>