<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".test.TestRespuestaAziraphale">

    <TextView
        android:id="@+id/tvRATitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvRATitulo"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvRATitulo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvRATitulo2"
        android:textAlignment="center"
        android:textSize="22dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivAziraphale"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:srcCompat="@drawable/aziraphale" />

    <TextView
        android:id="@+id/tvRAText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvRAText"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textSize="18dp"/>

    <Button
        android:id="@+id/btnVolverTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/aqua"
        android:textSize="20dp"
        android:text="@string/btnVolverTest" />
</LinearLayout>